Ensure TOC button label is truncated
Bug: T184807

--- a/modules/styles/flow/widgets/mw.flow.ui.NavigationWidget.less
+++ b/modules/styles/flow/widgets/mw.flow.ui.NavigationWidget.less
@@ -35,6 +35,7 @@
 			.oo-ui-buttonElement-button {
 				width: 100%;
 				.oo-ui-labelElement-label {
+					display: block;
 					text-overflow: ellipsis;
 					overflow: hidden;
 					width: 100%;
